--- a/lablog-frontend/index.html
+++ b/lablog-frontend/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/capsule.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="LabLog - A personal lab dashboard for tracking experiments, research progress, and scientific data management."
+            content="MedLab - A personal lab dashboard for tracking experiments, research progress, and scientific data management."
         />
         <meta
             name="keywords"
             content="lab, laboratory, dashboard, experiments, research, science, data management, tracking"
         />
-        <title>LabLog – Personal Lab Dashboard</title>
+        <title>MedLab – Personal Lab Dashboard</title>
         <style>
             @keyframes floatFade {
                 0% {
